Renaming troubleshooters4973 to sbobet Pantip เล่น สล็อต เว็บ

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "troubleshooters4973",
+  "name": "sbobet Pantip เล่น สล็อต เว็บ",
   "theme": "syntax",
   "version": "0.0.0",
   "description": "sbobet Pantip เล่น สล็อต เว็บ ⭐ เริ่มต้นการเดิมพันที่มั่นคงมากที่สุด รวมรูปแบบเกมที่หลากหลาย เว็บสล็อตแตกบ่อย ที่ได้รับความนิยมจากนักเดิมพันจำนวนมาก เริ่มต้นการเดิมพันที่มั่นคง ตลอดกาล",
